# bend-intel

./: .gitignore  README.md  go.mod  go.sum
.github/workflows/: ci.yml
bendlang/: bench_test.go  fuzz_test.go  language.go  queries_test.go  scanner.go  scanner_test.go
bendlang/grammar/: UPSTREAM.md
bendlang/grammar/source/: grammar.js  package.json
bendlang/grammar/source/grammar/: common.js  fun.js  imp.js
bendlang/grammar/source/queries/: highlights.scm
bendlang/grammar/source/src/: grammar.json  node-types.json  parser.c
bendlang/queries/: folds.scm  indents.scm  locals.scm  tags.scm
cmd/bend-corpus-report/: main.go
cmd/bend-intel/: main.go
cmd/bend-parity/: main.go
cmd/bendls/: main.go
docs/: compatibility.md  gotreesitter-findings.md  original-spec.md  performance.md  semantic-protocol.md
intel/: analysis.go  analysis_test.go  document.go  document_test.go  edit.go  edit_test.go  lexical.go  recovery.go  scopes.go  semantic_protocol.go  semantic_protocol_test.go  semantics.go  tokens.go  tokens_test.go  workspace.go  workspace_test.go
intel/testdata/: radix_prefix.bend
internal/cparity/: README.md  cgo.go  cgo_test.go  parity_test.go
internal/cparity/c/: scanner.c
lsp/: server.go  server_test.go
semanticd/: Cargo.toml
semanticd/src/: main.rs
tools/: generate-bend-grammar.sh  regenerate-bend-grammar.sh  run-bend-parity.sh  validate-roadmap.sh  wasm-smoke.sh
